--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    password: 120608
+    password: jxb120608
     url: jdbc:mysql://localhost:3306/myshop?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=false&serverTimezone=GMT%2b8&allowPublicKeyRetrieval=true
   servlet:
     multipart:
@@ -20,7 +20,7 @@ spring:
       # Redis服务器连接端口
       port: 6379
       # Redis服务器连接密码（默认为空）
-      password: 120608
+      password:
       # 连接超时时间
       timeout: 10s
       lettuce:
